unpackaged/main/default/objects/Credit_Approval__c/Credit_Approval__c.object-meta.xml
<CustomObject>
    <label>Credit Approval</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Credit Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>