unpackaged/main/default/objects/Credit_Approval__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Approvals</relationshipLabel>
    <relationshipName>Credit_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>