unpackaged/main/default/objects/Credit_Approval__c/fields/Credit_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Date__c</fullName>
    <label>Credit Approval ID Date</label>
    <type>Date</type>
</CustomField>