unpackaged/main/default/objects/Credit_Approval__c/fields/Credit_Approval_Dept_and_Year__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Dept_and_Year__c</fullName>
    <label>Credit Approval Dept and Year</label>
    <length>6</length>
    <type>Text</type>
</CustomField>