unpackaged/main/default/objects/Credit_Approval__c/fields/Credit_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Notes__c</fullName>
    <label>Credit Approval Notes</label>
    <type>TextArea</type>
</CustomField>