unpackaged/main/default/objects/Credit_Approval__c/fields/Credit_Approval_Terms__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Terms__c</fullName>
    <label>Credit Approval Terms</label>
    <type>TextArea</type>
</CustomField>