unpackaged/main/default/objects/Credit_Approval__c/fields/Credit_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approved_By__c</fullName>
    <label>Credit Approved By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mark Meyers</fullName>
            </value>
            <value>
                <fullName>Jody Werner</fullName>
            </value>
            <value>
                <fullName>Stephanie Holmes</fullName>
            </value>
            <value>
                <fullName>Ted Redmond</fullName>
            </value>
            <value>
                <fullName>Ed Haggerty</fullName>
            </value>
            <value>
                <fullName>Peter Eberle</fullName>
            </value>
            <value>
                <fullName>Jade Ward</fullName>
            </value>
            <value>
                <fullName>Toby LaBrie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>