unpackaged/main/default/objects/Credit_Approval__c/fields/Credit_Bank_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Bank_Balance__c</fullName>
    <label>Credit Bank Balance</label>
    <length>30</length>
    <type>Text</type>
</CustomField>