unpackaged/main/default/objects/Credit_Approval__c/fields/Credit_Determination__c.field-meta.xml
<CustomField>
    <fullName>Credit_Determination__c</fullName>
    <label>Credit Determination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>More Information Required</fullName>
            </value>
            <value>
                <fullName>Pre-Payment Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>