unpackaged/main/default/objects/Credit_Approval__c/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <label>Credit Score</label>
    <length>5</length>
    <type>Text</type>
</CustomField>