unpackaged/main/default/objects/Credit_Approval__c/fields/Customer_Currency__c.field-meta.xml
<CustomField>
    <fullName>Customer_Currency__c</fullName>
    <label>Customer Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>