unpackaged/main/default/objects/Credit_Approval__c/fields/Financial_Stress_Score__c.field-meta.xml
<CustomField>
    <fullName>Financial_Stress_Score__c</fullName>
    <label>Financial Stress Score</label>
    <length>5</length>
    <type>Text</type>
</CustomField>