unpackaged/main/default/objects/Credit_Approval__c/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>