unpackaged/main/default/objects/Credit_Approval__c/fields/NS_Credit_Info_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Credit_Info_ID__c</fullName>
    <externalId>true</externalId>
    <label>NS Credit Info ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>