unpackaged/main/default/objects/Credit_Approval__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Credit Approvals</relationshipLabel>
    <relationshipName>Credit_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>