unpackaged/main/default/objects/Credit_Approval__c/fields/Project_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Project_Credit_Limit__c</fullName>
    <label>Customer Credit Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>