unpackaged/main/default/objects/Credit_Approval__c/fields/Treasury_Representative__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Representative__c</fullName>
    <label>Treasury Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>