unpackaged/main/default/objects/Credit_Approval__c/fields/Vanguard_Credit_Approval_ID__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_Credit_Approval_ID__c</fullName>
    <label>Vanguard Credit Approval ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>