unpackaged/main/default/objects/Credit_Approval__c/fields/Vanguard_Name__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_Name__c</fullName>
    <label>Vanguard Name</label>
    <type>TextArea</type>
</CustomField>