unpackaged/main/default/objects/Credit_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Credit_Limit__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Treasury_Representative__c</columns>
    <columns>Customer_Currency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>